--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: aquamarine;
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
 }
@@ -19,8 +20,9 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
     background: black;
   }
-}
+} */
