adds style to the body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,16 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100vh;
+  width: 100vw;
   background-color: aquamarine;
 }
+
+/* main {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(34, 204, 247);
+} */
 
 /* a {
   color: inherit;
