--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   height: 100vh;
   width: 100vw;
-  background-color: aquamarine;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  /* background-image: url(https://i0.wp.com/www.alphr.com/wp-content/uploads/2016/07/whos_that_pokemon.png?fit=1920%2C1080&ssl=1); */
 }
 
 /* main {
