--- a/styles/Choice.module.css
+++ b/styles/Choice.module.css
@@ -1,3 +1,9 @@
 .choice {
-  border: 5px black solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px red solid;
+  color: aqua;
+  width: 13vw;
+  height: 5vh;
 }
