displays all choices in choiceBox

--- a/styles/Choice.module.css
+++ b/styles/Choice.module.css
@@ -1,3 +1,10 @@
+.choice-box {
+  border: 5px rgb(22, 224, 93) solid;
+  color: aqua;
+  width: 27vw;
+  height: 15vh;
+}
+
 .choice {
   display: flex;
   justify-content: center;
