--- a/styles/Choice.module.css
+++ b/styles/Choice.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   border: 5px rgb(22, 224, 93) solid;
-  min-width: 45vw;
+  min-width: 43vw;
   height: 15vh;
   bottom: 0px;
 }
@@ -13,8 +13,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 10px;
   border: 5px red solid;
   color: aqua;
+  width: 13vw;
+  height: 5vh;
+}
+
+.choice:hover {
+  border: 5px rgb(25, 92, 207) solid;
+}
+
+.correct {
+  border: 5px rgb(22, 224, 93) solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  color: rgb(28, 30, 30);
   width: 13vw;
   height: 5vh;
 }
