changes choice font size

--- a/styles/Choice.module.css
+++ b/styles/Choice.module.css
@@ -37,7 +37,7 @@
   align-items: center;
   margin: 10px;
   color: rgb(28, 30, 30);
-  font-size: x-large;
+  font-size: large;
   width: 15vw;
   height: 5vh;
 }
