adds styling for the regular pokemon image

--- a/styles/PokeImage.module.css
+++ b/styles/PokeImage.module.css
@@ -1,6 +1,12 @@
-.image {
+.silhouette {
   /* this line creates a sillouette of the pokemon image */
   filter: contrast(0%) brightness(0%);
+  position: absolute;
+  top: 20vh;
+  left: 10vw;
+}
+
+.original {
   position: absolute;
   top: 20vh;
   left: 10vw;
