--- a/styles/Timer.module.css
+++ b/styles/Timer.module.css
@@ -1,7 +1,12 @@
 .timer-box {
-  position: absolute;
-  left: 30px;
+  position: relative;
   top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.timer {
+  position: absolute;
   border: 2px rgb(0, 0, 0) solid;
   border-radius: 10px;
   background-color: rgb(222, 221, 221);
